--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Favorite Movie Page</title>
+    <title>Favorite Movie Page | Catch Me If You Can</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <!-- Create an H1 tag with your favorite movie title below-->
-    <!-- Create an H2 tag with the movie's release year -->
-    <h3 id="tagline">This is a fun tribute page to my favorite movie!</h3>
-    <!-- update the img tag of a your favorite movie from google (such as Simon and Garfunkel https://bit.ly/3oEABhI) -->
-    <img id="movie" src="https://bit.ly/3Ltg5Ko" alt="My Favorite movie">
+    <h1 class="center">Catch Me If You Can</h1>
+    <h2 class="center">2002</h2>
+    <h3 class="center">This is a fun tribute page to <em>Catch Me If You Can</em>, one of my favorite movies!</h3>
+    <!-- ask caleb how to senter img while keeping "id="'-->
+    <img id="movie" src="https://images2.vudu.com/poster2/32708-168" alt="My Favorite movie | Catch Me If You Can">
     <button id="change-border">Change Border</button>
-    
-    <!-- add a p tag with at least two sentences about your favorite movie -->
-  
-    <!-- add an ol tag with three li tags inside. These should have fun facts about your favorite movie -->
-
-      <!-- li tag 1 -->
-
-      <!-- li tag 2 -->
-      <!-- li tag 3 -->
-    <!-- close the ol tag -->
+    <p class="center">The first time I watched this movie I was about 6 years old, too young to appreciate it. But, about 10 years later when I watched it again, I found a masterpiece.</p>
+    <hr>
+    <div>
+      <h3 class="center">Fun Facts!</h3>
+      <ol>
+        <li>An incredible <em>true story</em> of Frank William Abagnale Jr., a man who cashed out about $2.5 million worth of bad checks and succesfully impersonated a Pilot and a doctor, ALL BEFORE REACHING ADULTHOOD!</li>
+        <li>The movie is based on his book that came out in 1980.</li>
+        <li>The real Frank Abagnale Jr. played a role in the movie</li>
+      </ol>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
