added a custom border around ordered list items in CSS as well as refined some text in HTML

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1 class="center">Catch Me If You Can</h1>
     <h2 class="center">2002</h2>
     <h3 class="center">This is a fun tribute page to <em>Catch Me If You Can</em>, one of my favorite movies!</h3>
-    <!-- ask caleb how to senter img while keeping "id="'-->
+    <!-- ask caleb how to center img while keeping "id=" attribute-->
     <img id="movie" src="https://images2.vudu.com/poster2/32708-168" alt="My Favorite movie | Catch Me If You Can">
     <button id="change-border">Change Border</button>
-    <p class="center">The first time I watched this movie I was about 6 years old, too young to appreciate it. But, about 10 years later when I watched it again, I found a masterpiece.</p>
+    <p class="center">"The first time I watched this movie I was about 6 years old, too young to appreciate it. But, about 10 years later when I watched it again, I found a masterpiece."</p>
     <hr>
     <div>
       <h3 class="center">Fun Facts!</h3>
